--- a/TyM/tym.html
+++ b/TyM/tym.html
@@ -5,56 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" 
     rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <title>TERMOS Y MATES</title>
-    <style>
-div.cont{
-            width: 90%; 
-            margin: auto; /*para que quede centrado*/
-            background-color: gray;
-            border: 8px solid brown;
-            border-radius: 1%;
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-            grid-template-rows: repeat(auto-fit, minmax(280px, 1fr));
-            gap: 50px;
-            justify-items: center;
-            padding: 2%;
-}
-
-.card {
-	background-color: white; 
-	border-radius: 8px;
-	padding: 1rem;
-	width: 270px;
-    display: flex;
-    flex-direction: column;
-}
-
-.card__img {
-	width: 100%;
-}
-
-.card__title {
-	font-size: 20px;
-	margin: 14px 0 10px;
-}
-.card__link{
-    border-radius: 8px;
-    margin-top: 7px;
-    padding: 0.7rem 0.6rem;
-    color: white;
-    text-decoration: none;
-    background-color: coral;
-    font-size: 15px;
-    display: inline-block;
-}
-.card__link--modif{
-    background-color: red;
-    border: none;
-}
-
-    </style>
 </head>
 <body>
      <header>Bienvenidos, Bienvenidas!</header>
